fixed menu spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,6 @@
 h1, h2, h3, h4, a {
     font-family: 'Helvetica Bold';
     font-weight: normal;
-    width: 100%;
 }
 
 html {
@@ -32,6 +31,7 @@ h1 {
     color: white;
     line-height: 120%;
     margin-bottom: 1%;
+    width: 100%;
 }
 
 h2 {
@@ -39,6 +39,7 @@ h2 {
     color: white;
     margin-top: 3%;
     margin-bottom: 4%;
+    width: 100%;
 }
 
 h3 {
@@ -97,7 +98,7 @@ p {
 
 .sidenav a {
     padding: 3%;
-    margin-left: 3%;
+    padding-left: 6%;
     margin-right: 5%;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -117,6 +118,7 @@ p {
     position: absolute;
     top: 0;
     right: 1%;
+    text-align: right;
     font-size: 36px;
     margin-left: 50px;
     color: white;
